[project]
name = "hbtools"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.13.0",
    "lxml<6.0.0",
    "matplotlib<=3.10.3",
    "numpy<2.3",
    "contourpy<1.3.3", # numpy和 contourpy 是为了Centos 7 兼容
    "rich>=14.0.0",
    "typer>=0.15.4",
    "ase@git+https://gitlab.com/1041176461/ase-abacus.git",
    "seekpath>=2.1.0",
    "pymatgen>=2025.6.14",
]

[project.scripts]
hb = "hbtools:app"
hbi = "hbtools.input.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv.build-backend]
source-exclude = ["tests"]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "lxml-stubs>=0.5.1",
    "mypy>=1.15.0",
    "optype[numpy]>=0.9.3",
]
